# xor-net

./: .gitignore  Cargo.toml  LICENSE  OPTIMISATION.md  README.md  SPARSE_FORMAT.md  pyproject.toml
.github/workflows/: ci.yml  release-python.yml  release-rust.yml
examples/: baseline_llama.rs  batch_bench.rs  bench_layer.rs  bench_memory.rs  chat.rs  check_8b_accuracy.rs  check_accuracy.rs  check_cpu.rs  dump_logits.rs  dump_logits_for_compare.rs  dump_tok.rs  jepa_policy.rs  load_test.rs  repack_to_pack5.rs  run_2b.rs  run_3b.rs  run_benchmark.rs  run_llama3_8b_158.rs  scratch_cycle.rs  scratch_layer_types.rs  simple_usage.rs  simple_usage_backup.rs  ternary_llama.rs  test_tok.rs  threads.rs
server/: main.rs
src/: lib.rs  loader.rs  python.rs  sampler.rs  tensor.rs  util.rs
src/bit1/: layers.rs  mod.rs  ops.rs  quantization.rs  simd.rs
src/bit1_58/: layers.rs  lut.rs  mod.rs  ops.rs  quantization.rs  simd.rs  sparse.rs
src/loader/: mod.rs  sparse_loader.rs
src/models/: auto.rs  llama.rs  mod.rs
src/models/llama/: attention.rs  block.rs  mlp.rs  mod.rs
src/nn/: dynamic_linear.rs  fast_add.rs  fast_attention.rs  fast_attention_simd.rs  fast_rmsnorm.rs  fast_silu.rs  mod.rs
src/tensor/: workspace.rs
tests/: attention_numerics_tests.rs  bit1_58_tests.rs  bit1_tests.rs  fast_attention_tests.rs  linear_layer_tests.rs  loader_tests.rs  quantization_158bit_tests.rs  quantization_1bit_tests.rs  sampler_tests.rs  simd_dot_product_tests.rs  tensor_arithmetic_tests.rs  tensor_core_tests.rs  tensor_layout_tests.rs  tensor_ops_tests.rs  tensor_rmsnorm_tests.rs  tensor_rope_tests.rs  util_tests.rs
