[package]
name = "xor-net"
version = "0.1.0"
edition = "2024"
autoexamples = false
license = "MIT"
repository = "https://github.com/faudil/xor-net"
description = "High-performance CPU inference engine for 1-bit and 1.58-bit quantized LLMs using SIMD-accelerated bitwise operations"
readme = "README.md"
categories = ["machine-learning", "science", "wasm"]
keywords = ["llm", "quantization", "bitnet", "1-bit", "1.58-bit", "simd", "inference"]

[[example]]
name = "run_3b"
path = "examples/run_3b.rs"

[[example]]
name = "run_2b"
path = "examples/run_2b.rs"

[[example]]
name = "run_benchmark"
path = "examples/run_benchmark.rs"

[[example]]
name = "simple_usage"
path = "examples/simple_usage.rs"

[[example]]
name = "jepa_policy"
path = "examples/jepa_policy.rs"

[[example]]
name = "bench_layer"
path = "examples/bench_layer.rs"

[[example]]
name = "bench_memory"
path = "examples/bench_memory.rs"

[[example]]
name = "load_test"
path = "examples/load_test.rs"

[[example]]
name = "run_llama3_8b_158"
path = "examples/run_llama3_8b_158.rs"

[[example]]
name = "dump_logits"
path = "examples/dump_logits.rs"

[[example]]
name = "chat"
path = "examples/chat.rs"

[[example]]
name = "check_accuracy"
path = "examples/check_accuracy.rs"

[[example]]
name = "dump_logits_for_compare"
path = "examples/dump_logits_for_compare.rs"

[[example]]
name = "check_8b_accuracy"
path = "examples/check_8b_accuracy.rs"

[[example]]
name = "batch_bench"
path = "examples/batch_bench.rs"

[[bin]]
name = "convert_sparse"
path = "src/bin/convert_sparse.rs"

[[bin]]
name = "xor-net-server"
path = "server/main.rs"

[dependencies]
anyhow = "1.0.103"
candle-core = "0.11.0"
hf-hub = "0.5.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokenizers = "0.23.1"
jemallocator = "0.5.4"
safetensors = "0.5.2"
memmap2 = "0.9.11"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310", "generate-import-lib"], optional = true }

[dev-dependencies]
candle-nn = "0.11.0"
candle-transformers = "0.11.0"

[features]
default = []
python = ["pyo3"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"


